--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "localize": ["es-PR"],
-            "outputPath": "dist/language-translate",
+            "outputPath": "docs",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": ["zone.js"],
